--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,8 @@
         hsla(242, 74%, 61%, 0.8)
     )!important;
 }
+
+.section {
+    min-height: calc(100vh - 80px); 
+    padding-top: 80px; 
+}
